# fibsem-metadata

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  bundle_lambda.sh  docker-compose.yml  ingest.py  initialize_db.sh  pyproject.toml  render_template.py  run.sh
.github/workflows/: build_api.yml  pytest.yml
COS7_Cell11_8x8x8nm/: README.md
Chlamydomonas_4x4x4nm/: README.md
HeLa_Cell2_4x4x4nm/: README.md  data-portal-description.md
HeLa_Cell3_4x4x4nm/: README.md
Jurkat_Cell1_4x4x4nm/: README.md
LoadID365_ROI4_8x8x8nm/: README.md
Macrophage_FS80_Cell2_4x4x4nm/: README.md
TWalther_WT45_Cell2_4x4x4nm/: README.md
U2OS_Cell4_8x8x8nm/: README.md
U2OS_Cell6_8x8x8nm/: README.md
api/: index.json
api/jrc_ccl81-covid-1/: manifest.json
api/jrc_choroid-plexus-2/: manifest.json
api/jrc_cos7-11/: manifest.json
api/jrc_ctl-id8-1/: manifest.json
api/jrc_ctl-id8-2/: manifest.json
api/jrc_ctl-id8-3/: manifest.json
api/jrc_ctl-id8-4/: manifest.json
api/jrc_ctl-id8-5/: manifest.json
api/jrc_dauer-larva/: manifest.json
api/jrc_fly-acc-calyx-1/: manifest.json
api/jrc_fly-fsb-1/: manifest.json
api/jrc_fly-larva-1/: manifest.json
api/jrc_fly-mb-z0419-20/: manifest.json
api/jrc_hela-1/: manifest.json
api/jrc_hela-2/: manifest.json
api/jrc_hela-21/: manifest.json
api/jrc_hela-22/: manifest.json
api/jrc_hela-3/: manifest.json
api/jrc_hela-4/: manifest.json
api/jrc_hela-bfa/: manifest.json
api/jrc_hela-h89-1/: manifest.json
api/jrc_hela-h89-2/: manifest.json
api/jrc_jurkat-1/: manifest.json
api/jrc_macrophage-2/: manifest.json
api/jrc_mus-kidney/: manifest.json
api/jrc_mus-liver/: manifest.json
api/jrc_mus-pancreas-1/: manifest.json
api/jrc_mus-pancreas-2/: manifest.json
api/jrc_mus-pancreas-3/: manifest.json
api/jrc_mus-sc-zp104a/: manifest.json
cdk/: output.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts  (+2 more)
ctl_1/: README.md
ctl_id8_1/: README.md
hela_4/: README.md
hela_nz_2/: README.md
metadata/: index.json
schemas/: manifest.schema.json
src/: test.py
templates/: data-portal-description.md  hess_2020_release.jinja  hess_2020_release.json
tests/: test_metadata.py
(+1114 files in other folders)
