[tool.poetry]
name = "fibsem-metadata"
version = "0.1.3"
description = "Metadata and metadata generators for FIB-SEM data"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.7, <4"
pydantic = "^1.8.1"
click = "^7.1.2"
pytest = "^6.2.5"
fsspec = "^2021.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
