[tool.poetry]
name = "fibsem-metadata"
version = "0.1.3"
description = "Metadata and metadata generators for FIB-SEM data"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.10, <4.0.0"
pydantic = "^1.9.0"
click = "^8.0.0"
pytest = "^6.2.5"
fsspec = {version="^2021.11.1", extras=["s3"]}
requests = "^2.27.1"
SQLAlchemy = "^1.4.35"
psycopg2 = "^2.9.3"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
alembic = "^1.8.0"
mangum = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.910"

[tool.poetry.scripts]
cellmap-api = 'fibsem_metadata.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "data/"