[tool.poetry]
name = "fibsem-metadata"
version = "0.1.3"
description = "Metadata and metadata generators for FIB-SEM data"
authors = ["Davis Vann Bennett <davis.v.bennett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <4.0.0"
pydantic = "^1.9.0"
click = "^8.0.0"
fsspec = {version="^2021.11.1", extras=["s3"]}
requests = "^2.27.1"
SQLAlchemy = "^1.4.35"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"
alembic = "^1.8.0"
mangum = "^0.15.0"
aws-psycopg2 = "^1.3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.910"
isort = "^5.10.1"
pytest = "^7.1.2"
botocore = "^1.27.57"
boto3 = "^1.24.57"

[tool.poetry.scripts]
cellmap-api = 'fibsem_metadata.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = "data/"